left align to see if that fixes it
sorta a work around.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 	max-width: 500px;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
+	text-align: left;
 }
 
 #builtwith{
@@ -48,7 +48,7 @@ body{
 }
 .rw-words{
 	display: inline;
-	text-indent: 10px;
+	text-indent: 0px;
 }
 .rw-words-1 span{
 	position: absolute;
